# terraining-heightmap-generator

./: .eslintrc.yml  .gitignore  LICENSE  README.md  eslint.config.mjs  heightmapFlow.md  nuxt.config.ts  package.json  tsconfig.json
.github/: FUNDING.yml
effects_lib/: Cargo.toml
effects_lib/src/: lib.rs
heightmap_lib/: Cargo.toml
heightmap_lib/src/: lib.rs
png_lib/: Cargo.toml
png_lib/src/: lib.rs
src/: App.vue
src/components/: ConfigurationPanel.vue  ContentsArea.vue  ControlPanel.vue  CustomizeMapImagePanel.vue  DownloadPanel.vue  InfoPanel.vue  LittoralEditor.vue  MapBox.vue  ModalWindow.vue  OverlayScrollbars.vue  SettingPanel.vue
src/composables/: useDebug.ts  useEventBus.ts  useFetchTiles.ts  useMapbox.ts  usePreview.ts  useSettings.ts  useWorker.ts
src/plugins/: analytics.client.ts  defineSettings.client.ts  fontawesome.ts  throttle.ts
src/types/: geojsontoosm.d.ts  pixijs-canvas-webworker.ts  types.ts
src/utils/: _getHeightMap.ts  _getHeightMap2.ts  canvasRenderer.ts  const.ts  contains.ts  createTexture.ts  customControl.ts  depthCanvasRender.ts  effects.ts  elevation.ts  filters.ts  generateCitiesMap.ts  getCSV.ts  getCitiesMap.ts  getCitiesMapBak.ts  getExtent.ts  getHeightMap.ts  getHeightmap.ts  getLayerColor.ts  getMapImage.ts  getOsmMap.ts  getWaterDepthCorrectionMap.ts  getWaterMap.ts  getWaterMapBak.ts  gpgpu.js  gradientBasedSubdivision.ts  initialValue.ts  isTokenValid.ts  saveSettings.ts  tileDecoder.ts  tileProcess.ts  tiles.ts  workerPool.ts
src/workers/: calcCitiesMap.js  calcCitiesMap.ts  generateMap.ts  getCitiesMapWorker.ts  (+2 more)
wasm/: Cargo.toml
wasm/png_lib/: Cargo.toml
wasm/png_lib/src/: lib.rs
(+51 files in other folders)
