[package]
name = "effects_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
wasm-bindgen = "0.2.93"
rustfft = { version = "6.2.0", features = ["wasm_simd"] }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
console_error_panic_hook = { version = "0.1.2", optional = true }
web-sys = { version = "0.3.70", features = ["console"] }
