[package]
name = "png_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.6.5"
png = "0.17.9"
serde_bytes = "0.11.15"
